# lb-ext-native — the native (Tier-2) extension SDK: the child-side of the sidecar wire.
#
# A native extension is a subprocess the host supervises over stdio. This crate is the ONLY
# thing such an extension imports from the platform — it re-exports the child face of the wire
# protocol (init/health/call/shutdown), the host-callback client, and the token self-check.
# It deliberately does NOT expose the host-side supervision machinery (that stays in lb's
# lb-supervisor): freezing host internals as public API is exactly what this facade avoids.
[package]
name = "lb-ext-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "The child-side wire protocol + host callback for native Lazybones extensions."

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "rt", "macros"] }
# The host-callback client, re-exported so a native extension carries a single platform dependency
# (the Cargo.toml doc + lib.rs already promise "the host-callback client" lives behind this facade).
lb-sidecar-client.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "rt", "macros", "rt-multi-thread"] }
